# ops-insight

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  config.example.toml
.github/workflows/: build.yml
docs/: clean-architecture.md  log-formats.md  project-log.md  rust-guidelines.md  security.md
frontend/: index.html  main.js  package-lock.json  package.json  styles.css  vite.config.ts
frontend/src/: App.module.css  App.tsx  index.css  types.ts
frontend/src-tauri/icons/: icon.icns
frontend/src/components/: ConfigTab.module.css  ConfigTab.tsx  DesensitizeTab.module.css  DesensitizeTab.tsx  GenerateTab.module.css  GenerateTab.tsx  PromptTab.module.css  PromptTab.tsx  ReportTab.module.css  ReportTab.tsx
ops-insight-core/: Cargo.toml  config.example.toml
ops-insight-core/src/: config.rs  factory.rs  helpers.rs  lib.rs  main.rs
ops-insight-core/src/infrastructure/: mod.rs
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: config.rs  desensitize.rs  mod.rs  prompt.rs  report.rs
src/application/dtos/: mod.rs
src/application/use_cases/: generate_report.rs  mod.rs
src/domain/entities/: mod.rs  report.rs
src/domain/ports/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/claude/: analyzer.rs  mod.rs
src/infrastructure/local/: analyzer.rs  mod.rs
src/infrastructure/newrelic/: mod.rs  source.rs
src/infrastructure/openai/: analyzer.rs  mod.rs
src/infrastructure/output/: markdown.rs  (+1 more)
(+28 files in other folders)
