[package]
name = "ops-insight-tauri"
version = "0.1.0"
edition = "2024"

[lib]
name = "ops_insight_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ops-insight-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ops-insight-core = { path = "../ops-insight-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
toml = "0.8"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
